--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Examen Medico </title>
 </head>
 <body>
-    <h1> Examen Medico - Paciente</h1>
+    <h1> Examen Medico --  Paciente</h1>
     
     <table class="table">
         <thead>
